# WeatherBot

./: .gitignore  LICENSE  MainMenu.py  MainMenu.spec  README.md  Setting_Window.py  SuggestionEngine.py  Suggestion_Engine.py  Suggestion_Window.py  SuggestionsEngine  Todo_Window.py  Weather.py  WeatherBotMain.py  Weather_Window.py  class_approach_WeatherBot.py  main.py  pyproject.toml  recommendations.py  task_manager  task_manager.py  tasks.json  weatherapi.py
src/: MainMenu.py  Suggestion_Window.py  TaskManager.py  Todo_Window.py  Weather.py  Weather_Window.py
