[project]
dynamic = ["version"]
name = "Weatherbot"
dependencies = [
    "requests",
    "pyglet",
    "pillow",
    "pgeocode"
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Jonrussel1/WeatherBot"

[tool.setuptools]
"packages" = ["src"]